@@ -1,7 +1,12 @@
-# $Id: Changes,v 1.26 2003/07/18 21:27:15 petdance Exp $
+# $Id: Changes,v 1.27 2003/07/20 03:02:36 petdance Exp $
 Revision history for Perl extension WWW::Mechanize
 
 0.54
+	[ENHANCEMENTS]
+	* extract_links() is now an internal-only method, named
+	  _extract_links().  If you're using it, don't.  Use
+	  find_all_links() instead, which is more flexible.
+
 	[FIXES]
 	* No longer tries to tech mech-forms if you're not installing
 	  it.
